# kpop-digital-photocard

./: .gitignore  README.md
case/: README.md  back.stl  button.stl  digital_photocard_IPS.stl  front.stl
collection-app/: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
collection-app/plans/: web-service-migration.md  youtube-shorts-mjpeg-converter.md
collection-app/src/: __init__.py
collection-app/src/components/: __init__.py  channel_sidebar.py  progress_display.py  settings_panel.py  video_grid.py
collection-app/src/models/: __init__.py  channel.py  settings.py  video.py
collection-app/src/services/: __init__.py  conversion_service.py  database.py  download_service.py  export_service.py  youtube_service.py
collection-app/src/utils/: __init__.py  ffmpeg_utils.py  thumbnail_cache.py
firmware/: User_Setup.h  board_config.h  esp32s3_video_player.ino
